--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@
     <header id="inicio">
         <h1>Elvis Santos Barzola</h1>
         <h2>Candidato a Capataz | 2026 - 2028</h2>
-        <div class="lema-badge">MONASTERIAL #ElPerúEsCarmelita</div>
+        <!--div class="lema-badge">MONASTERIAL #ElPerúEsCarmelita</div-->
+        <div class="lema-badge">Familia 14</div>
         <br><br>
         <p>Trabajando por amor a nuestra madre del Carmen. ¡Adelante Familia 14!</p>
     </header>
@@ -216,8 +217,9 @@
     <section class="container">
         <h2 class="section-title">Presentación</h2>
         <div class="intro-card">
-            <p><strong>Pertenecer a una "CUADRILLA" no es una cuestión de número de integrantes, sino de la calidad de los HERMANOS que la conforman.</strong></p>
+            <p>Pertenecer a una “CUADRILLA” no es una cuestión de número de integrantes, sino de la calidad de los HERMANOS que la conforman; un anhelo que todos compartimos.</p>
             <p>¿Cómo logramos ser una "GRAN CUADRILLA"? La respuesta nace de una directiva comprometida a promover una festividad digna en honor a nuestra excelsa Patrona. Ansiamos ser un grupo que trabaje de manera organizada y ordenada. Nuestra verdadera diferencia es una propuesta cimentada en la gestión eficiente.</p>
+            <p>Mientras que estos objetivos definen el QUÉ debemos hacer, algo conocido por todos, la calidad humana de nuestro equipo es la que hace viable el CÓMO lo lograremos. Esa es nuestra verdadera diferencia: una propuesta cimentada en la gestión eficiente y, sobre todo, en los siguientes pilares.</p>
         </div>
     </section>
 
@@ -225,7 +227,7 @@
         <h2 class="section-title">Nuestros Pilares</h2>
         <div class="pilares-grid">
             <div class="pilar-card">
-                <i class="fas fa-heart pilar-icon"></i>
+                <i class="fa-regular fa-church"></i>
                 <div class="pilar-title">Amor y Fe</div>
                 <p>A nuestra Santísima Madre.</p>
             </div>
@@ -243,6 +245,11 @@
                 <i class="fas fa-hands-helping pilar-icon"></i>
                 <div class="pilar-title">Humildad</div>
                 <p>Vocación de Servicio.</p>
+            </div>
+            <div class="pilar-card">
+                <i class="fa-solid fa-church"></i>
+                <div class="pilar-title">Principios</div>
+                <p>Valores sólidos.</p>
             </div>
         </div>
     </section>
