--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         <h2 class="section-title">Nuestros Pilares</h2>
         <div class="pilares-grid">
             <div class="pilar-card">
-                <i class="fa-regular fa-church"></i>
+                <i class="fas fa-solid fa-church"></i>
                 <div class="pilar-title">Amor y Fe</div>
                 <p>A nuestra Santísima Madre.</p>
             </div>
@@ -247,7 +247,7 @@
                 <p>Vocación de Servicio.</p>
             </div>
             <div class="pilar-card">
-                <i class="fa-solid fa-church"></i>
+                <i class="fas fa-solid fa-church"></i>
                 <div class="pilar-title">Principios</div>
                 <p>Valores sólidos.</p>
             </div>
