--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
     <section class="container">
         <h2 class="section-title">Presentación</h2>
         <div class="intro-card">
-            <p>Pertenecer a una “CUADRILLA” no es una cuestión de número de integrantes, sino de la calidad de los HERMANOS que la conforman; un anhelo que todos compartimos.</p>
-            <p>¿Cómo logramos ser una "GRAN CUADRILLA"? La respuesta nace de una directiva comprometida a promover una festividad digna en honor a nuestra excelsa Patrona. Ansiamos ser un grupo que trabaje de manera organizada y ordenada. Nuestra verdadera diferencia es una propuesta cimentada en la gestión eficiente.</p>
-            <p>Mientras que estos objetivos definen el QUÉ debemos hacer, algo conocido por todos, la calidad humana de nuestro equipo es la que hace viable el CÓMO lo lograremos. Esa es nuestra verdadera diferencia: una propuesta cimentada en la gestión eficiente y, sobre todo, en los siguientes pilares.</p>
+            <p>Pertenecer a una <b>“CUADRILLA”</b>b> no es una cuestión de número de integrantes, sino de la calidad de los HERMANOS que la conforman; un anhelo que todos compartimos.</p>
+            <p>¿Cómo logramos ser una <b>"GRAN CUADRILLA"</b>b>? La respuesta nace de una directiva comprometida a promover una festividad digna en honor a nuestra excelsa Patrona. Ansiamos ser un grupo que trabaje de manera organizada y ordenada. Nuestra verdadera diferencia es una propuesta cimentada en la gestión eficiente.</p>
+            <p>Mientras que estos objetivos definen el <b>QUÉ</b>b> debemos hacer, algo conocido por todos, la calidad humana de nuestro equipo es la que hace viable el <b>CÓMO</b>b> lo lograremos. Esa es nuestra verdadera diferencia: una propuesta cimentada en la gestión eficiente y, sobre todo, en los siguientes pilares.</p>
         </div>
     </section>
 
@@ -227,7 +227,7 @@
         <h2 class="section-title">Nuestros Pilares</h2>
         <div class="pilares-grid">
             <div class="pilar-card">
-                <i class="fas fa-solid fa-church"></i>
+                <i class="fas fa-light fa-church"></i>
                 <div class="pilar-title">Amor y Fe</div>
                 <p>A nuestra Santísima Madre.</p>
             </div>
@@ -247,7 +247,7 @@
                 <p>Vocación de Servicio.</p>
             </div>
             <div class="pilar-card">
-                <i class="fas fa-solid fa-church"></i>
+                <i class="fas fa-regular fa-hands-holding-child"></i>
                 <div class="pilar-title">Principios</div>
                 <p>Valores sólidos.</p>
             </div>
