--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plan de Trabajo 2026-2028 | Elvis Santos Barzola</title>
+    <title>Plan de Trabajo 2026-2028 | Julio Michilena Villena</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
@@ -206,8 +206,8 @@
     </nav>
 
     <header id="inicio">
-        <h1>Elvis Santos Barzola</h1>
-        <h2>Candidato a Capataz | 2026 - 2028</h2>
+        <h1>Julio Michilena Villena</h1>
+        <h2>Lista #2 | Periodo 2026 - 2028</h2>
         <!--div class="lema-badge">MONASTERIAL #ElPerúEsCarmelita</div-->
         <div class="lema-badge">Familia 14</div>
         <br><br>
@@ -347,7 +347,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Elvis Santos Barzola</td>
+                    <td>Julio Michilena Villena</td>
                     <td><span class="role-badge" style="background:#4e3629; color:white;">CAPATAZ</span></td>
                 </tr>
                 <tr>
@@ -363,11 +363,11 @@
                     <td><span class="role-badge">Tesorero</span></td>
                 </tr>
                 <tr>
-                    <td>Julio Michilena Villena</td>
+                    <td>Jose Herrera Wong</td>
                     <td><span class="role-badge">Secretario</span></td>
                 </tr>
                 <tr>
-                    <td>Jose Herrera Wong</td>
+                    <td>Huber Santos Trinidad</td>
                     <td><span class="role-badge">Asistencia Social</span></td>
                 </tr>
             </tbody>
@@ -375,7 +375,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026-2028 Gestión Elvis Santos Barzola</p>
+        <p>&copy; Lista #2 | Periodo 2026 - 2028 | Julio Michilena Villena</p>
         <div class="social-icons">
             <a href="#"><i class="fab fa-facebook"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
